quick css fix to avoid container being overlapped by header:before rules

--- a/src/styles/modules/_branding.scss
+++ b/src/styles/modules/_branding.scss
@@ -55,7 +55,9 @@ body .sk-layout {
       width: 100%;
       border-bottom: 50px solid $dark_grey;
     }
-
+header .container:first-of-type {
+z-index: 10;
+}
     .cessda-organisation {
       height: 21px;
       position: absolute;
